	  raised an error when setting some int64 fields.  Make more
	  function arguments const and remove a superfluous
	  BEGIN_RCPP/END_RCPP.  Also add comment about long-vector
	  support.  All of these fixes were highlighted by Flexelint.
	* inst/unitTests/runit.int64.R (test.int64): Add tests for above.
	* inst/unitTests/runit.extremevalues.R (test.uint32): Idem.

2013-12-30  Murray Stokely  <mstokely@google.com>

	* inst/unitTests/runit.extremevalues.R (test.uint32): Add test
	  verifying that we can store 2^32 - 1 properly in repeated or
	  optional protobuf fields.
	* src/extractors.cpp (rprotobuf): Correct handling of uint32 for
	  repeated fields.
	* src/wrapper_Message.cpp (rprotobuf): Remove Rf_error in favor of
	  Rcpp_error so that we throw an exception and unwind the stack to
	  deallocate objects before jumping to R's error.
	* src/DescriptorPoolLookup.cpp (rprotobuf): Idem.
	* R/size.R: Correct an incorrect method name that prevented size<-
	  from working.
	* man/size.Rd: Document the behavior of size<-
	* (C++): Ran all the C++ files and most of the headers through
	  clang-format as described in the STYLE file on R-Forge.
	  Basically, we now use 4-char indents and 100-char limit for line
	  wrap.

2013-12-28  Murray Stokely  <mstokely@google.com>

	* src/extractors.cpp (rprotobuf): Correct handling of uint32 for
	  single values greater than 2^31 by returning as R numeric types
	  to avoid losing precision since R doesn't have unsigned int
	  types but C++ does. Works around an Rcpp bug
	  https://r-forge.r-project.org/tracker/index.php?func=detail&aid=1360&group_id=155&atid=637

2013-12-27  Murray Stokely  <mstokely@google.com>

	* src/mutators.cpp: Refactor setMessageField into four separate
	  functions, correct a few minor typos, and wrap everything in a
	  try/catch block so we catch any exceptions generated by Rcpp::as
	  or other functions and forward it along to an R-language stop()
	  error instead of terminating our R instance.